crates/biome_js_analyze/tests/specs/nursery/noRedundantDefaultExport/valid/named_and_default.js
export const foo = 1;
export { foo };

export default function foo() {}