crates/biome_js_analyze/tests/specs/nursery/noRedundantDefaultExport/invalid/class_declaration.js
export class MyClass {}
export default MyClass;